src/objects/SW_FTE_Conversion_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>FTE_Type__c</fullName>
        <label>FTE Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>E03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>US-SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SW FTE Conversion Matrix</label>
    <nameField>
        <displayFormat>SWFTE-{00000}</displayFormat>
        <label>SW FTE Conversion Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SW FTE Conversion Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>